# python-irceline

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: pytest.yml  release.yml
src/open_irceline/: __init__.py  api.py  belaqi.py  data.py  forecast.py  rio.py  utils.py
tests/: conftest.py  test_api.py  test_api_forecast.py  test_api_forecasts.py  test_api_rio.py  test_api_rio_ifdm.py  test_belaqi.py  test_sized_dict.py  test_utils.py
tests/fixtures/: forecast.csv  forecast_wms_capabilities.xml  forecast_wms_feature_info.json  forecast_wms_feature_info_invalid.json  forecast_wms_feature_info_no_field.json  ifdm_interpolation_feature_info.json  rio_capabilities.xml  rio_ifdm_capabilities.xml  rio_wfs.json  rio_wfs_dmean.json  rio_wfs_for_belaqi.json  rio_wfs_with_errors.json
